Add docker and fix some issues

--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,10 @@ tools/*
 !tools/graph.py
 coverage/*
 !coverage/.gitignore
-*/build/*
+build_docker/*
+!build_docker/.gitkeep
+!build_docker/debian/.gitkeep
+!build_docker/archlinux/.gitkeep
+!build_docker/manjaro/.gitkeep
+!build_docker/ubuntu/20.10/.gitkeep
+!build_docker/ubuntu/20.04/.gitkeep
