--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,15 +47,14 @@ if(NOT CMAKE_CXX_STANDARD)
         message(STATUS "C++20: OK")
     elseif(COMPILER_SUPPORTS_CXX17)
         set(CMAKE_CXX_STANDARD 17)
-        message(WARNING "C++17: OK")
+        message(STATUS "C++17: OK")
     elseif(COMPILER_SUPPORTS_CXX14)
         set(CMAKE_CXX_STANDARD 14)
-        message(STATUS "C++14: ERROR")
-        message(FATAL_ERROR "C++14 is old, please use newer compiler.")
+        message(STATUS "C++14: OK")
+       # message(FATAL_ERROR "C++14 is old, please use newer compiler.")
     elseif(COMPILER_SUPPORTS_CXX11)
         set(CMAKE_CXX_STANDARD 11)
-        message(STATUS "C++11: ERROR")
-        message(FATAL_ERROR "C++11 is old, please use newer compiler.")
+        message(WARNING "C++11: OK")
     else()
         message(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++17 or above support. Please use a different C++ compiler.")
     endif()
@@ -214,7 +213,7 @@ find_package(Boost 1.67.0 COMPONENTS thread filesystem system unit_test_framewor
 
 if(Boost_FOUND)
     message(STATUS "Boost FOUND")
-    include_directories( ${Boost_INCLUDE_DIRS} )
+    include_directories( ${Boost_INCLUDE_DIRS})
     link_directories(${Boost_LIBRARIES})
 else()
     message(STATUS "Boost: NOT FOUND")
@@ -450,7 +449,7 @@ target_link_libraries(bench_pc PRIVATE time vector)
 add_dependencies(bench_pc ${CUSTOM_LIBS})
 
 add_executable(list_all_file ${LIST_ALL_FILE} ${SRCS} ${HEADERS})
-target_link_libraries(list_all_file PRIVATE filesystem stdc++fs)
+target_link_libraries(list_all_file PRIVATE ${Boost_LIBRARIES} filesystem stdc++fs)
 add_dependencies(list_all_file ${CUSTOM_LIBS})
 
 if (OPENCV_FOUND)
