--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 3.13)
-project(RPG VERSION 0.0.1 LANGUAGES CXX C)
+project(BenLib VERSION 0.0.1 LANGUAGES CXX C)
 
 #   ==================================================
 #   ================    CMAKE CONF    ================
@@ -62,13 +62,13 @@ if(NOT CMAKE_CXX_STANDARD)
     # Compiler-specific C++11 activation.
     if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
         # require at least gcc 4.8
-        if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 8.0)
+        if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.8)
             message(FATAL_ERROR "GCC version must be at least 4.8!")
             set(CMAKE_CXX_STANDARD 14)
         endif()
     elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
         # require at least clang 3.2
-        if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 8.0)
+        if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.2)
             message(FATAL_ERROR "Clang version must be at least 3.2!")
         endif()
     elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
@@ -471,7 +471,7 @@ add_dependencies(list_all_file ${CUSTOM_LIBS})
 
 if (OPENSSL_FOUND)
     add_executable(list_all_file_hash ${LIST_ALL_FILE_HASH} ${SRCS} ${HEADERS})
-    target_link_libraries(list_all_file_hash PRIVATE ${Boost_LIBRARIES} filesystem stdc++fs my_crypto thread)
+    target_link_libraries(list_all_file_hash PRIVATE ${Boost_LIBRARIES} filesystem stdc++fs my_crypto thread time)
     add_dependencies(list_all_file_hash ${CUSTOM_LIBS})
 endif()
 
