--- a/lib/convert_utils/CMakeLists.txt
+++ b/lib/convert_utils/CMakeLists.txt
@@ -14,27 +14,14 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Quick Multimedia)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Quick Multimedia)
 
-#QT_FOUND
-if (Qt5_FOUND)
+#Qt5_FOUND
+if (QT_FOUND)
     message(STATUS "QT: FOUND on convert_utils")
-    #include_directories( ${QT_INCLUDES})
+    include_directories(${QT_INCLUDES})
 else()
     message(STATUS "QT: NOT FOUND on convert_utils")
 endif()
 
-if (Qt5_FOUND)
-set(SRCS
-	sfml_utils.cpp
-	binary.cpp
-	qt_utils.cpp
-	)
-	
-set(HEADERS
-	sfml_utils.hpp
-	binary.hpp
-	binary_imp.hpp
-	)
-else()
 set(SRCS
 	sfml_utils.cpp
 	binary.cpp
@@ -45,15 +32,18 @@ set(HEADERS
 	binary.hpp
 	binary_imp.hpp
 	)
+if (QT_FOUND)
+	set(SRCS ${SRCS} qt_utils.cpp)
+	set(HEADERS ${HEADERS} qt_utils.hpp)
 endif()
+
 #add_library(convert_utils_static STATIC ${SRCS} ${HEADERS})
 add_library(convert_utils SHARED ${SRCS} ${HEADERS})
 
 target_include_directories(convert_utils PUBLIC 
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
-
-if (Qt5_FOUND)
-target_link_libraries(convert_utils PUBLIC Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Quick Qt${QT_VERSION_MAJOR}::Multimedia)
+if (QT_FOUND)
+	target_link_libraries(convert_utils PUBLIC Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Quick Qt${QT_VERSION_MAJOR}::Multimedia)
 endif()
 #export(TARGETS testLib FILE testLib-exports.cmake)
