--- a/config_docker/Dockerfile_ubuntu
+++ b/config_docker/Dockerfile_ubuntu
@@ -5,7 +5,7 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update \ 
     && apt-get install -y --allow-unauthenticated \ 
     libsfml-dev ninja-build libopencv-dev qml-module-qtquick-controls \ 
-    g++ build-essential cmake qt5-default mesa-common-dev libpcap-dev libssl-dev \ 
+    g++ build-essential cmake qt5-default qtmultimedia5-dev mesa-common-dev libpcap-dev libssl-dev \ 
     freeglut3-dev libboost-all-dev libqt5multimedia5 openssl \ 
     && apt clean -y \ 
     && apt autoclean -y \ 
