--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,5 +84,6 @@
         "variant": "cpp",
         "tensor": "cpp",
         "*.ipp": "cpp"
-    }
+    },
+    "C_Cpp.default.configurationProvider": "go2sh.cmake-integration"
 }
