--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,7 +83,8 @@
         "valarray": "cpp",
         "variant": "cpp",
         "tensor": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "revstr.h": "c"
     },
     "C_Cpp.default.configurationProvider": "go2sh.cmake-integration"
 }
