--- a/lib/texture/CMakeLists.txt
+++ b/lib/texture/CMakeLists.txt
@@ -3,14 +3,14 @@ cmake_minimum_required(VERSION 3.11)
 project(texture CXX C)
 
 set(SRCS
-	#sfml_screenshot.cpp
+	sfml_screenshot.cpp
 	load_titlemap.cpp
 	load_texture.cpp
 	load_texturemap.cpp
 	)
 	
 set(HEADERS
-	#sfml_screenshot.hpp
+	sfml_screenshot.hpp
 	load_titlemap.hpp
 	load_texture.hpp
 	load_texturemap.hpp
